T09/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "my_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
    "name" = "custom"
  }
}

locals {
  private = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
  public  = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  zone    = ["us-east-1a", "us-east-1b", "us-east-1c"]
}

resource "aws_subnet" "private_subnet" {
  count             = length(local.private)
  vpc_id            = aws_vpc.my_vpc.id
  cidr_block        = local.private[count.index]
  availability_zone = local.zone[count.index % length(local.zone)]
  tags = {
    "Name" = "private-subnet"
  }
}

resource "aws_subnet" "public_subnet" {
  count             = length(local.public)
  vpc_id            = aws_vpc.my_vpc.id
  cidr_block        = local.public[count.index]
  availability_zone = local.zone[count.index % length(local.zone)]
  tags = {
    "Name" = "public-subnet"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.my_vpc.id
  tags = {
    "Name" = "custom"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.my_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  tags = {
    "name" = "public"
  }
}

resource "aws_route_table_association" "public_router" {
  for_each  = [for v in aws_subnet.public_subnet.id : v.id]
  subnet_id = each.value
  # for_each       = { for k, v in aws_subnet.public_subnet : k => v }
  # subnet_id      = each.value.id
  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "eip" {
  vpc = true
}

resource "aws_nat_gateway" "public" {
  subnet_id     = aws_subnet.private_subnet[0].id
  allocation_id = aws_eip.eip.id
  tags = {
    "name" = "nat"
  }
  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.gw]
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.my_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.public.id
  }
  tags = {
    "name" = "private"
  }
}

resource "aws_route_table_association" "private_router" {
  # for_each = [ for v in aws_subnet.private_subnet.id: v.id ]
  # subnet_id = each.value
  for_each       = { for k, v in aws_subnet.private_subnet : k => v }
  subnet_id      = each.value.id
  route_table_id = aws_route_table.private
}
